# bcc-skeleton

./: NOTICE  README.md  bcc-skeleton.cabal  bcc.cabal  bors.toml  cabal.project  default.nix  pipeline.yml  release.nix  shell.nix  stack.yaml  unsaved file 1
.buildkite/: pipeline.yml
app/: bcc.hs
bench/: Main.hs
docs/: Makefile  bcc.tex  bors.md  default.nix  nix.md  start.md  tags.KIWmEB  tags.alYjl2
nix/: default.nix  haskell.nix  pkgs.nix  sources.json
src/: Skeleton.hs
test/unit/: Main.hs  SkeletonSpec.hs
