cabal-version:       2.2
name:                bcc-skeleton
version:             0.1.0.0
synopsis:            Template project with reference CI setup
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2022 The Blockchain Company.io LLC
author:              TBCO
maintainer:          devops@blockchain-company.io

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  exposed-modules:     Skeleton
  build-depends:       base ^>=4.12.0.0
                     , bcc-prelude
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings

  if (!flag(development))
    ghc-options:         -Werror

executable bcc-skeleton
  main-is:             bcc-skeleton.hs
  build-depends:       base ^>=4.12.0.0
                     , bcc-prelude
                     , bcc-skeleton
  hs-source-dirs:      app
  default-language:    Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings

  if (!flag(development))
    ghc-options:         -Werror

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -O2
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , bcc-prelude
    , bcc-skeleton
    , hspec
    , text
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
  other-modules: SkeletonSpec

benchmark bcc-skeleton-bench
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -O2
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , bcc-prelude
    , criterion
    , bcc-skeleton
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is:
      Main.hs
